# example-get-started

./: pyproject.toml
.dvc/: config
dvc_plots/: index.html
